--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,7 @@ h5 {
     text-align: center;
 }
 /**********------------Index.html------------**********/
+
 /**********Header-menu**********/
 
 .header {
@@ -145,13 +146,13 @@ h5 {
     background-color: rgb(194, 12, 38);
     border: 1px solid rgb(194, 12, 38);
     color: #fff;
+    font-weight: bold;
 }
 .button__header:hover,
 .button__header:active,
 .button__header:focus {
     background-color: #fff;
     color: rgb(194, 12, 38);
-    font-weight: bold;
 }
 
 /*Adaptive menu*/
@@ -623,8 +624,8 @@ h5 {
     width: 258px;
     height: 43px;
     font-size: 1.3em;
-    font-weight: 300;
-    line-height: 1.8;
+    font-weight: bold;    
+    line-height: 1.9;
     background-color: #c20c26;
     border: 1px solid #c20c26;
     color: #fff;
@@ -635,7 +636,6 @@ h5 {
 .button__products:focus {
     color: #c20c26;
     background-color: #fff;
-    font-weight: bold;
 }
 .products-list {
     width: 70%;
@@ -730,8 +730,9 @@ h5 {
     width: 398px;
     height: 52px;
     font-size: 1em;
+    font-weight: bold;    
     color: rgb(255, 255, 255);
-    line-height: 2.9;
+    line-height: 3;
     background-color: #0392bc;
     border: 1px solid #0392bc;
     box-shadow: 3px 11px 39px #bab9b7;
@@ -742,7 +743,6 @@ h5 {
 .button__review:focus {
     color: #0392bc;
     background-color: #fff;
-    font-weight: bold;
 }
 
 /*************Section-clients*************/
@@ -772,9 +772,9 @@ h5 {
     height: 600px;
 }
 .ymaps-layers-pane{
-  filter: grayscale(100%);
-  filter: url(/img/filters.svg#grayscale); /* Firefox 3.5+ */
-  -webkit-filter: grayscale(1); /* Google Chrome & Safari 6+ */
+    filter: grayscale(100%);
+    filter: url(/img/filters.svg#grayscale); /* Firefox 3.5+ */
+    -webkit-filter: grayscale(1); /* Google Chrome & Safari 6+ */
 }
 .map-wrap {
     padding-top: 3em;
@@ -858,16 +858,13 @@ h5 {
     text-decoration: underline;
 }
 
-
 /************--------------Catalog.html--------------************/
-
 
 /**********Section-catalog-main**********/
 
 .catalog-main {
     padding-top: 96px;
 }
-
 .catalog-main__title-wrap {
     width: 100%;
     height: auto;
@@ -908,7 +905,6 @@ ul.submenu {
 #pechati{
     display: block;
 }
-
 .klishe-row__list img {
     width: 17%;
     height: auto;
@@ -940,7 +936,6 @@ ul.submenu {
     background: #fafafa;
     background: linear-gradient(to right, #fafafa, #f4f4f4, #fbfbfb);
 }
-
 .oplata__title-wrap {
     width: 100%;
     height: auto;
@@ -1064,27 +1059,32 @@ ul.submenu {
     text-transform: uppercase;
     padding-top: 35px;
 }
-/* Pop-up-form */
+
+/***************--------- Pop-up-form ---------***************/
 
 .hidden {
 	display: none;
 }
-
-form {
+#form_back,
+#form_review {
     background-color: #F7F7F7;
     padding: 25px 30px;
-    border: #79b433 5px solid;
+    border: rgb(17, 171, 216) 5px solid;
     border-radius: 5px;
+    max-width: 420px;
+    margin: auto;
+    position: relative;
 }
-
-form label {
+#form_back label,
+#form_review label {
     display: block;
     margin-bottom: 15px;
     color: #666;
     font-size: 14px;
 }
-
-form input {
+#form_back input,
+#form_review input,
+#form_review textarea {
     display: block;
     line-height: 40px;
     height: 40px;
@@ -1096,31 +1096,39 @@ form input {
     font-size: 20px;
     margin-top: 3px;
 }
-
-form .button_wrap {
+#form_back .button_wrap,
+#form_review .button_wrap {
     text-align: center;
     margin: 30px 0 10px;
 }
-
-.button.btn-green {
-    background-color: #79b433;
+.button.button__form {
+    max-width: 100%;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: color 0.2s ease-out,opacity 0.2s ease-out,background 0.2s ease-out;
+    width: 200px;
+    height: 40px;
+    font-size: 1em;
+    font-weight: bold;
+    font-weight: 300;
+    line-height: 2;
+    background-color: rgb(194, 12, 38);
+    border: 1px solid rgb(194, 12, 38);
     color: #fff;
-    outline: none;
-    font-size: 15px;
-    padding: 8px 10px;
 }
-
-#form_back {
-    max-width: 420px;
-    margin: auto;
-    position: relative;
+.button.button__form:hover {
+    background-color: #fff;
+    color: rgb(194, 12, 38);
 }
-
-#form_back h2 {
+#form_back h5,
+#form_review h5 {
     text-align: center;
     font-weight: normal;
 }
-
 #form_back p {
+    color: #3c3c3c;
     text-align: center;
+    padding: 15px 0 20px;
 }
